--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,7 +34,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tpm'
 
 # tmux-resurrect
-".tmux.conf" 49L, 2228C
+set -g @resurrect-dir '~/.tmux/resurrect'
 
 # tmux-prefix-highlight
 set -g status-right '#{prefix_highlight} #H | %a %Y-%m-%d %H:%M'
